--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 #navimg {
   margin: 0 20px; 
 }
+
 .navbar a {
   text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
@@ -21,6 +22,10 @@
 .navbar a:hover {
   text-decoration: none;
   border-bottom: 4px solid #8E1F1F;
+}
+
+.navbar #navimg a:hover {
+  border-bottom: none;
 }
 
 .mobile-menu {
@@ -203,6 +208,104 @@
     padding: 0 40px;
   }
 }
+
+
+
+
+/*-----------------Carrusel-------------------*/
+
+.slick-slider button {
+  position: absolute;
+  top: 32%;
+  outline: "none";
+  border: none;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 35px;
+  background-color: #a726266d;
+  color: white;
+  z-index: 99;
+}
+
+.slick-slider .slick-prev {
+  left: -30px;
+  font-size: 0;
+}
+
+.slick-slider .slick-prev::before {
+  content: '';
+  line-height: 1;
+  font-size: 25px;
+}
+
+
+
+.slick-slider .slick-next {
+  right: -30px;
+  font-size: 0;
+}
+
+.slick-slider .slick-next::after {
+  content: '';
+  line-height: 1;
+  font-size: 25px;
+}
+
+
+
+.slick-dots{
+  text-align: center;
+}
+
+.slick-dots li{
+  display: inline-block;
+  padding: 1px;
+  background-color: #ccc;
+  margin: 10px 5px;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.slick-dots button{
+  display: none;
+}
+
+.slick-dots li.slick-active{
+  background: #8E1F1F;
+}
+
+.slick-slider img{
+  width: 100%;
+  height: 250px;
+}
+
+
+
+.slick-slide {
+  padding:40px 0;
+  position: relative;
+  height:auto !important;
+  opacity: 0.5;
+  transition: all 900ms ease;
+}
+
+.slick-current {
+  opacity: 1;
+  transform: scale(1.2);
+  z-index: 99;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+} 
+
+.slick-slide .xyz{
+  opacity: 0;
+}
+
+.slick-current .xyz{
+  opacity: 1;
+}
+
 
 
 
