--- a/css/style.css
+++ b/css/style.css
@@ -408,18 +408,36 @@ margin-left: 200px;
   align-items: center;
 }
 
-#fotomia {
+.fotomia {
   padding: 25px;
   margin-left: 100px;
 }
 
-#bio{
+.bio{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 15px;
   text-align: center;
   margin-left: 5%;
   margin-right: 25%;
   text-align: justify;
+}
+
+@media (max-width: 600px) {
+  .aboutme {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .fotomia {
+    margin-bottom: 20px;
+    margin-left: 10px;
+  }
+
+  .bio{
+    margin-right: 10px;
+    margin-left: none;
+padding: 20px;
+  }
 }
 
 .containerFormacion {
@@ -453,6 +471,13 @@ margin-left: 200px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  transition: transform 0.3s ease-in-out;
+}
+
+.linksmedia:hover{
+  transform: scale(1.1);
 }
 
 .socialmedia img {
@@ -476,4 +501,112 @@ margin-left: 200px;
     border-bottom: 2px solid #BDDBDD;
 border-top: 2px solid #BDDBDD;
   }
+}
+
+
+
+/* Estilos base del formulario */
+.contact-form {
+  max-width: 500px;
+  margin: 0 auto;
+  color: #510F00;
+  padding: 20px;
+  background-color: #bddbdd68;
+  border-radius: 8px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #59d1da;
+  color: #510F00;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #8E1F1F;
+  color: #f9f9f9;
+}
+
+/* Media query para pantallas más pequeñas */
+@media (max-width: 600px) {
+  .contact-form {
+    max-width: 100%;
+  }
+}
+
+
+
+
+.textform {
+  display: inline-flex;
+  align-items: center;
+  margin-left: 33%;
+  margin-right: 35%;
+}
+
+.axolotl {
+  padding: 25px;
+}
+
+.txtform{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 15px;
+  text-align: center;
+  margin-left: 5%;
+  text-align: justify;
+}
+
+@media (max-width: 600px) {
+  .textform {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .axolotl {
+    margin-bottom: 20px;
+    margin-left: 10px;
+  }
+
+  .txtform{
+    margin-right: 10px;
+    margin-left: none;
+    padding: 20px;
+  }
+}
+
+
+.site-footer {
+  background-color: #BDDBDD;
+  color: #510F00;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 20px;
+  text-align: center;
+  margin-top: 60px;
+}
+
+.footer-content {
+  margin-bottom: 20px;
+  font-size: 20px;
 }
